# mac-toolkit-pro

./: .gitignore  CLAUDE.md  README.md  TOOLKIT_GUIDE.md  mac_battery_analyzer.py  mac_maintenance_cleaner.py  mac_network_monitor.py  mac_process_manager.py  mac_smart_cleaner.py  mac_storage_analyzer.py  mac_storage_detective.py  mac_system_monitor.py  mac_toolkit.py  pyproject.toml  requirements-toolkit.txt  toolkit
mac_toolkit_pro/: cli.py  menu.py
mac_toolkit_pro/analyzers/: appsupport.py  base.py  browser.py  dev_caches.py  disk.py  docker.py  downloads.py  logs.py  ollama.py  repos.py  trash.py  xcode.py
mac_toolkit_pro/cleaners/: base.py  generic.py
mac_toolkit_pro/core/: approval.py  config.py  logger.py  models.py  runner.py
mac_toolkit_pro/monitors/: base.py  battery.py  network.py  processes.py  system.py
mac_toolkit_pro/reporters/: audit.py  json_reporter.py  markdown.py  terminal.py
reports/analysis_20250922_101459/: battery_analysis.json  cleanup_simulation.txt  consolidated_report.md  network_analysis.json
reports/analysis_20250922_105227/: battery_analysis.json  cleanup_simulation.txt  consolidated_report.md  network_analysis.json
reports/analysis_20260316_120411/: report.md
tests/: test_analyzers.py  test_cli_domain.py  test_cli_monitors.py  test_dev_caches.py  test_menu.py  test_models.py  test_monitor_battery.py  test_monitor_network.py  test_monitor_processes.py  test_monitor_system.py  test_monitors_base.py  test_preview_table.py  test_runner.py  test_status_command.py  test_trash.py  test_xcode.py
(+6 files in other folders)
